[package]
name = "git-commit-search"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Search and highlight Git commit history in the terminal."
readme = "README.md"
repository = "https://github.com/marcelarie/git-commit-search"

[[bin]]
name = "gcs"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.23", features = ["env"] }
colored = "2.1.0"
git2 = "0.19.0"
ignore = "0.4.23"
regex = "1.11.1"
term_size = "0.3.2"
